fixed-letter spacing

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -109,7 +109,6 @@
     width: 517px;
     font-size: 60px;
     line-height: 1.066;
-    letter-spacing: -0.06em;
 }
 
     .hero-main-paragraph {
@@ -178,7 +177,6 @@
 
 .hero-main-title {
     font-size: 64px;
-    letter-spacing: -0.064em;
 }
 
 .hero-main-title-span {
